<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item android:id="@+id/action_help"
    android:icon="@drawable/ic_help"
    android:title="@string/action_help"
    app:showAsAction="always" />

  <item
    android:id="@+id/action_bluetooth"
    android:icon="@drawable/ic_bluetooth"
    android:title="@string/action_bluetooth"
    app:showAsAction="always" />

  <item android:id="@+id/action_sync"
    android:icon="@drawable/ic_sync"
    android:title="@string/action_sync"
    app:showAsAction="always" />

  <item android:id="@+id/action_edit"
    android:icon="@drawable/ic_edit"
    android:title="@string/action_edit"
    app:showAsAction="always" />


  <item android:id="@+id/action_clear_data"
    android:icon="@drawable/ic_delete"
    android:title="@string/action_clear_data"
    app:showAsAction="never" />

  <item android:id="@+id/action_clear_event_data"
    android:icon="@drawable/ic_delete"
    android:title="@string/action_clear_event_data"
    app:showAsAction="never" />

  <item android:id="@+id/action_settings"
    android:icon="@drawable/ic_settings"
    android:title="@string/action_settings"
    app:showAsAction="always" />

</menu>