<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".fragmentGeneralFragment">

  <data>

    <import type="team449.frc.scoutingappbase.databinding.Conversions" />

    <variable
      name="vm"
      type="team449.frc.scoutingappbase.model.MatchViewModel" />

    <variable
      name="handler"
      type="team449.frc.scoutingappbase.fragment.SubmitHandler" />
  </data>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <androidx.constraintlayout.widget.ConstraintLayout style="@style/PageContainer">


        <TextView
          android:id="@+id/deadText"
          style="@style/Text"
          android:text="@string/is_dead"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
          android:id="@+id/deadHelp"
          style="@style/Help"
          app:layout_constraintBottom_toBottomOf="@+id/deadText"
          app:layout_constraintStart_toEndOf="@id/deadText"
          app:layout_constraintTop_toTopOf="@id/deadText" />

        <RadioGroup
          android:id="@+id/dead"
          style="@style/Wrap"
          android:checkedButton="@={Conversions.radioIndexToIdDead(vm.dead)}"
          android:orientation="vertical"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/deadText">

          <RadioButton
            android:id="@+id/ralive0"
            style="@style/RadioButton"
            android:text="@string/alive" />

          <RadioButton
            android:id="@+id/rbroken1"
            style="@style/RadioButton"
            android:text="@string/broken" />

          <RadioButton
            android:id="@+id/rsometimes2"
            style="@style/RadioButton"
            android:text="@string/sometimes_dead" />

          <RadioButton
            android:id="@+id/rdead3"
            style="@style/RadioButton"
            android:text="@string/dead" />
        </RadioGroup>

        <View
          android:id="@+id/deadDiv"
          style="@style/Divider"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/dead" />


        <TextView
          android:id="@+id/defenseText"
          style="@style/Text"
          android:text="@string/played_defense"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/deadDiv" />

        <ImageButton
          android:id="@+id/defenseHelp"
          style="@style/Help"
          app:layout_constraintBottom_toBottomOf="@+id/defenseText"
          app:layout_constraintStart_toEndOf="@id/defenseText"
          app:layout_constraintTop_toTopOf="@id/defenseText" />

        <RadioGroup
          android:id="@+id/defense"
          style="@style/Wrap"
          android:checkedButton="@={Conversions.radioIndexToIdDefense(vm.defense)}"
          android:orientation="horizontal"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/defenseText">

          <RadioButton
            android:id="@+id/rnodef0"
            style="@style/RadioButton"
            android:text="@string/none" />

          <RadioButton
            android:id="@+id/rsomedef1"
            style="@style/RadioButton"
            android:text="@string/part" />

          <RadioButton
            android:id="@+id/rdefense2"
            style="@style/RadioButton"
            android:text="@string/all" />

        </RadioGroup>

        <View
          android:id="@+id/defenseDiv"
          style="@style/Divider"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/defense" />

        <!--    <TextView-->
        <!--      style="@style/Text"-->
        <!--      android:id="@+id/defendedText"-->
        <!--      android:text="Defended On?"-->
        <!--      app:layout_constraintTop_toBottomOf="@id/defenseDiv"-->
        <!--      app:layout_constraintStart_toStartOf="parent"/>-->


        <!--    <ImageButton-->
        <!--      android:id="@+id/defendedHelp"-->
        <!--      style="@style/Help"-->
        <!--      app:layout_constraintStart_toEndOf="@id/defendedText"-->
        <!--      app:layout_constraintTop_toTopOf="@id/defendedText"-->
        <!--      app:layout_constraintBottom_toBottomOf="@+id/defendedText"/>-->

        <!--    <RadioGroup-->
        <!--      style="@style/Wrap"-->
        <!--      android:id="@+id/defended"-->
        <!--      android:orientation="horizontal"-->
        <!--      android:checkedButton="@={Conversions.radioIndexToId(vm.alliance)}"-->
        <!--      app:layout_constraintStart_toStartOf="parent"-->
        <!--      app:layout_constraintEnd_toEndOf="parent"-->
        <!--      app:layout_constraintTop_toBottomOf="@id/defendedText">-->

        <!--      <RadioButton-->
        <!--        style="@style/RadioButton"-->
        <!--        android:id="@+id/r0"-->
        <!--        android:text="None" />-->

        <!--      <RadioButton-->
        <!--        style="@style/RadioButton"-->
        <!--        android:id="@+id/r1"-->
        <!--        android:text="Part"/>-->

        <!--      <RadioButton-->
        <!--        style="@style/RadioButton"-->
        <!--        android:id="@+id/r2"-->
        <!--        android:text="All"/>-->
        <!--    </RadioGroup>-->

        <!--    <View-->
        <!--      android:id="@+id/defendedDiv"-->
        <!--      style="@style/Divider"-->
        <!--      app:layout_constraintStart_toStartOf="parent"-->
        <!--      app:layout_constraintTop_toBottomOf="@id/defended"/>-->

        <TextView
          android:id="@+id/commentsText"
          style="@style/Text"
          android:text="@string/additional_comments"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/defenseDiv" />

        <EditText
          android:id="@+id/comments"
          style="@style/EditText"
          android:autofillHints=""
          android:hint="@string/comments_hint"
          android:inputType="text"
          android:text="@={vm.comments}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/commentsText" />

        <Button
          style="@style/Button"
          android:layout_width="0dp"
          android:onClick="@{handler::submit}"
          android:text="@string/submit_button"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>
  </ScrollView>
</layout>